css & js file link solve

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Weabside</title>
   <!-- css link -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -239,6 +239,6 @@
  <!-- scroll-top -->
  <a href="#" class="top"><i class='bx bx-up-arrow-alt'></i></a>
   <!-- castom js link -->
-  <script type="text/javascript" src="/java/index.js"></script>
+  <script type="text/javascript" src="java/index.js"></script>
 </body>
 </html>
